--- a/starter-pete-thinkful-portfolio-main/index.html
+++ b/starter-pete-thinkful-portfolio-main/index.html
@@ -79,7 +79,7 @@
             <div>
               <img src="images/abstract-red.png" alt="Abstract Red" />
             </div>
-            <p>
+            <p style="font-size: 14px; text-align: center">
               Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
               waistcoat scenester hell of.
             </p>
@@ -90,7 +90,7 @@
             <div>
               <img src="images/spiral-zany.png" alt="Spiral Zany" />
             </div>
-            <p>
+            <p style="font-size: 14px; text-align: center">
               Sriracha portland taxidermy cronut messenger bag, vegan
               distillery. Vaporware kickstarter air plant mumblecore food truck.
             </p>
@@ -101,7 +101,7 @@
             <div>
               <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
             </div>
-            <p>
+            <p style="font-size: 14px; text-align: center">
               Edison bulb single-origin coffee snackwave, actually ennui
               locavore shabby chic forage.
             </p>
